--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.7",
+    "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-animated-slider": "^1.1.4",
     "react-awesome-slider": "^4.1.0",
     "react-scripts": "^5.0.1",
     "react-slideshow-image": "^4.3.1",
+    "swiper": "^11.1.1",
+    "tailwind-merge": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
